--- a/src/AK101.cfg
+++ b/src/AK101.cfg
@@ -1,28 +1,28 @@
 ##The Url where to submit the data.
-#url=xxxxxx
+#url=""xxxxxx""
 url="http://www.szdiy.org"
 
 ##The passwd of the server you want to submit to.
-#passwd=xxxxxx
+#passwd="xxxxxx"
 passwd="11805812962901298014026"
 
 
 ##The headers septation which used to distinguish the different columns.
-#headers_septation=xxxxxx
+#headers_septation="xxxxxx"
 headers_septation=","
 
 ##Then columns of the items, as shown in the view's header view.
-#headers=xxxxxx
+#headers="xxxxxx"
 headers="NickName,Email,Purpose,PhoneNum"
 
 ##Which organization you are.
-#xml_organization=xxxxxx
+#xml_organization="xxxxxx"
 xml_organization="szlug"
 
 ##Then member xml element's label.
-#member=xxxxxx
+#member="xxxxxx"
 member="hackers"
 
 ##Then member xml element's label.
-#submit_member=xxxxxx
+#submit_member="xxxxxx"
 submit_member="NickName"
