add init status and update the GUI

--- a/src/AK101.cfg
+++ b/src/AK101.cfg
@@ -1,3 +1,8 @@
+##The default data xml file name.
+#xml="xxxxxx.xml"
+xml_filename="./members.xml"
+
+
 ##The Url where to submit the data.
 #url=""xxxxxx""
 url="http://www.szdiy.org"
